// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckboxField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-9 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-9[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-9[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-9[aria-disabled='true'] .emotion-14 {
  fill: #e9eaeb;
}

.emotion-9[aria-disabled='true'] .emotion-14 .emotion-16 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]:checked+.emotion-14 {
  fill: #ffd3e3;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]:checked+.emotion-14 .emotion-16 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]+.emotion-14 {
  fill: #ffebf2;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]+.emotion-14 .emotion-16 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-9[aria-disabled='true'] .emotion-12:checked+.emotion-14 {
  fill: #e5dbfd;
}

.emotion-9[aria-disabled='true'] .emotion-12:checked+.emotion-14 .emotion-16 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-checked="mixed"]+.emotion-14 {
  fill: #e5dbfd;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-checked="mixed"]+.emotion-14 .emotion-16 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-9 .emotion-12:checked+.emotion-14 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-9 .emotion-12:checked+.emotion-14 .emotion-16 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-9 .emotion-12[aria-invalid="true"]:checked+.emotion-14 .emotion-16 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-9 .emotion-12[aria-checked="mixed"]+.emotion-14 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-9 .emotion-12[aria-checked="mixed"]+.emotion-14 .emotion-16 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='false']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='true']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='mixed']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='true'][aria-checked='false']+.emotion-14 .emotion-16 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='true'][aria-checked='true']+.emotion-14 .emotion-16 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-9 .emotion-12[aria-invalid="true"]+.emotion-14 {
  fill: #e51963;
}

.emotion-9 .emotion-12[aria-invalid="true"]+.emotion-14 .emotion-16 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-9 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-11:not(:disabled) {
  cursor: pointer;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-11:not(:disabled):checked+.emotion-14,
.emotion-11:not(:disabled)[aria-checked='mixed']+.emotion-14 {
  fill: #8c40ef;
}

.emotion-11:not(:disabled):checked+.emotion-14 .emotion-16,
.emotion-11:not(:disabled)[aria-checked='mixed']+.emotion-14 .emotion-16 {
  stroke: #8c40ef;
}

.emotion-11:not(:disabled)[aria-invalid='true']+.emotion-14,
.emotion-11:not(:disabled)[aria-invalid='mixed']+.emotion-14 {
  fill: #ffebf2;
}

.emotion-11:not(:disabled)[aria-invalid='true']+.emotion-14 .emotion-16,
.emotion-11:not(:disabled)[aria-invalid='mixed']+.emotion-14 .emotion-16 {
  stroke: #b3144d;
}

.emotion-11:focus+.emotion-14 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-11:focus+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-11[aria-invalid='true']:focus+.emotion-14 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-11[aria-invalid='true']:focus+.emotion-14 .emotion-16 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-13 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-15 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-22 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-0 emotion-1"
            >
              <div
                aria-disabled="false"
                class="emotion-8 emotion-9 emotion-10"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-11 emotion-12"
                  id="«r0»"
                  name="Checkbox.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-13 emotion-14"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-15 emotion-16"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-17 emotion-1"
                >
                  <div
                    class="emotion-19 emotion-1"
                  >
                    <label
                      class="emotion-21 emotion-22 emotion-23"
                      for="«r0»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="emotion-8 emotion-9 emotion-10"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  class="emotion-11 emotion-12"
                  id="«r3»"
                  name="Checkbox.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-13 emotion-14"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-15 emotion-16"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-17 emotion-1"
                >
                  <div
                    class="emotion-19 emotion-1"
                  >
                    <label
                      class="emotion-21 emotion-22 emotion-23"
                      for="«r3»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CheckboxField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-9 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-9[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-9[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-9[aria-disabled='true'] .emotion-14 {
  fill: #e9eaeb;
}

.emotion-9[aria-disabled='true'] .emotion-14 .emotion-16 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]:checked+.emotion-14 {
  fill: #ffd3e3;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]:checked+.emotion-14 .emotion-16 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]+.emotion-14 {
  fill: #ffebf2;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-invalid="true"]+.emotion-14 .emotion-16 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-9[aria-disabled='true'] .emotion-12:checked+.emotion-14 {
  fill: #e5dbfd;
}

.emotion-9[aria-disabled='true'] .emotion-12:checked+.emotion-14 .emotion-16 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-checked="mixed"]+.emotion-14 {
  fill: #e5dbfd;
}

.emotion-9[aria-disabled='true'] .emotion-12[aria-checked="mixed"]+.emotion-14 .emotion-16 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-9 .emotion-12:checked+.emotion-14 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-9 .emotion-12:checked+.emotion-14 .emotion-16 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-9 .emotion-12[aria-invalid="true"]:checked+.emotion-14 .emotion-16 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-9 .emotion-12[aria-checked="mixed"]+.emotion-14 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-9 .emotion-12[aria-checked="mixed"]+.emotion-14 .emotion-16 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='false']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='true']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='false'][aria-checked='mixed']+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='true'][aria-checked='false']+.emotion-14 .emotion-16 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9:hover[aria-disabled='false'] .emotion-12[aria-invalid='true'][aria-checked='true']+.emotion-14 .emotion-16 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-9 .emotion-12[aria-invalid="true"]+.emotion-14 {
  fill: #e51963;
}

.emotion-9 .emotion-12[aria-invalid="true"]+.emotion-14 .emotion-16 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-9 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-11:not(:disabled) {
  cursor: pointer;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-11:not(:disabled):checked+.emotion-14,
.emotion-11:not(:disabled)[aria-checked='mixed']+.emotion-14 {
  fill: #8c40ef;
}

.emotion-11:not(:disabled):checked+.emotion-14 .emotion-16,
.emotion-11:not(:disabled)[aria-checked='mixed']+.emotion-14 .emotion-16 {
  stroke: #8c40ef;
}

.emotion-11:not(:disabled)[aria-invalid='true']+.emotion-14,
.emotion-11:not(:disabled)[aria-invalid='mixed']+.emotion-14 {
  fill: #ffebf2;
}

.emotion-11:not(:disabled)[aria-invalid='true']+.emotion-14 .emotion-16,
.emotion-11:not(:disabled)[aria-invalid='mixed']+.emotion-14 .emotion-16 {
  stroke: #b3144d;
}

.emotion-11:focus+.emotion-14 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-11:focus+.emotion-14 .emotion-16 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-11[aria-invalid='true']:focus+.emotion-14 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-11[aria-invalid='true']:focus+.emotion-14 .emotion-16 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-13 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-15 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-22 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-0 emotion-1"
            >
              <div
                aria-disabled="false"
                class="emotion-8 emotion-9 emotion-10"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-11 emotion-12"
                  id="«r6»"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-13 emotion-14"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-15 emotion-16"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-17 emotion-1"
                >
                  <div
                    class="emotion-19 emotion-1"
                  >
                    <label
                      class="emotion-21 emotion-22 emotion-23"
                      for="«r6»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="emotion-8 emotion-9 emotion-10"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-11 emotion-12"
                  id="«r9»"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-13 emotion-14"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-15 emotion-16"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-17 emotion-1"
                >
                  <div
                    class="emotion-19 emotion-1"
                  >
                    <label
                      class="emotion-21 emotion-22 emotion-23"
                      for="«r9»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
